--- a/SB6_CSharp/Source/SB6_CSharp.csproj
+++ b/SB6_CSharp/Source/SB6_CSharp.csproj
@@ -51,12 +51,11 @@
     <Compile Include="Chapter02\Example_02L02.cs" />
     <Compile Include="Chapter02\Example_02L03_02L07.cs" />
     <Compile Include="Chapter02\Example_02L08_02L09.cs" />
+    <Compile Include="Chapter03\Example_03L01_03L02.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Chapter03\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
