--- a/SB6_CSharp/Source/SB6_CSharp.csproj
+++ b/SB6_CSharp/Source/SB6_CSharp.csproj
@@ -23,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -34,9 +35,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="OpenTK">
-      <HintPath>References\OpenTK.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -58,10 +56,20 @@
     <Compile Include="Chapter03\Example_03L09.cs" />
     <Compile Include="Chapter03\Example_03L10.cs" />
     <Compile Include="Chapter03\Example_03L11_03L12.cs" />
+    <Compile Include="Chapter05\Example_05L01_05L05.cs" />
+    <Compile Include="Chapter05\Example_05L06_05L07.cs" />
+    <Compile Include="Chapter05\Example_05L08.cs" />
+    <Compile Include="Chapter05\Example_05L20_05L25.cs" />
+    <Compile Include="Chapter05\Example_05L26.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Local\opentk-2014-07-23\Source\OpenTK\OpenTK.csproj">
+      <Project>{A37A7E14-0000-0000-0000-000000000000}</Project>
+      <Name>OpenTK</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
