--- a/SB6_CSharp/Source/SB6_CSharp.csproj
+++ b/SB6_CSharp/Source/SB6_CSharp.csproj
@@ -66,8 +66,15 @@
     <Compile Include="Example_05L27_05L28\Example_05L27_05L28.cs" />
     <Compile Include="Example_05L29_05L32\Example_05L29_05L32.cs" />
     <Compile Include="BasicAtomicCounters\BasicAtomicCounters.cs" />
+    <Compile Include="Example_05L33_05L35\Example_05L33_05L35.cs" />
+    <Compile Include="Example_05L36_05L37\Example_05L36_05L37.cs" />
+    <Compile Include="Example_05L38_05L39\Example_05L38_05L39.cs" />
+    <Compile Include="Framework\GLObject.cs" />
+    <Compile Include="Framework\KhronosTextureFormat.cs" />
+    <Compile Include="Getopt.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Framework\Shader.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Local\opentk-2014-07-23\Source\OpenTK\OpenTK.csproj">
@@ -75,7 +82,10 @@
       <Name>OpenTK</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Example_05L38_05L39\render.fs.glsl" />
+    <None Include="Example_05L38_05L39\render.vs.glsl" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
