--- a/SB6_CSharp/Source/SB6_CSharp.csproj
+++ b/SB6_CSharp/Source/SB6_CSharp.csproj
@@ -77,7 +77,9 @@
     <Compile Include="Listing_05L33_05L35\Listing_05L33_05L35.cs" />
     <Compile Include="Listing_05L36_05L37\Listing_05L36_05L37.cs" />
     <Compile Include="Listing_05L38_05L39\Listing_05L38_05L39.cs" />
-    <Compile Include="Listing_05L40_05L46\Listing_05L40_05L46.cs" />
+    <Compile Include="Listing_05L40_05L43\Listing_05L40_05L43.cs" />
+    <Compile Include="Listing_05L44\Listing_05L44.cs" />
+    <Compile Include="Listing_05L45_05L46\Listing_05L45_05L46.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Framework\Shader.cs" />
@@ -99,9 +101,19 @@
     <None Include="Extra_WrapModes\render.vs.glsl" />
     <None Include="Listing_05L38_05L39\render.fs.glsl" />
     <None Include="Listing_05L38_05L39\render.vs.glsl" />
-    <None Include="Listing_05L40_05L46\render.fs.glsl" />
-    <None Include="Listing_05L40_05L46\render.vs.glsl" />
+    <None Include="Listing_05L40_05L43\render.fs.glsl" />
+    <None Include="Listing_05L40_05L43\render.vs.glsl" />
+    <None Include="Listing_05L44\display.fs.glsl" />
+    <None Include="Listing_05L44\loadstore.fs.glsl" />
+    <None Include="Listing_05L44\loadstoredisplay.vs.glsl" />
+    <None Include="Listing_05L45_05L46\clear.fs.glsl" />
+    <None Include="Listing_05L45_05L46\clear.vs.glsl" />
+    <None Include="Listing_05L45_05L46\append.fs.glsl" />
+    <None Include="Listing_05L45_05L46\append.vs.glsl" />
+    <None Include="Listing_05L45_05L46\resolve.fs.glsl" />
+    <None Include="Listing_05L45_05L46\resolve.vs.glsl" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
